Bulding the header pt 1 - draw a triangle using clip-path (another take)

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -32,7 +32,7 @@ body {
     ,url('../img/hero.jpg');
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 50%, 0 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
 
 }
 
