--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -15,7 +15,7 @@ Dark green: #28b485
 }
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
@@ -91,6 +91,7 @@ body {
     display: inline-block;
     border-radius: 100px;
     transition: all .2s ;
+    position: relative;
 }
 
 .btn:hover {
@@ -106,6 +107,33 @@ body {
 .btn-white {
     background-color: #fff;
     color: #777;
+}
+
+.btn::after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 0.5s ease-out .75s;
+    animation-fill-mode: backwards;
 }
 
 @keyframes moveInLeft {
@@ -130,6 +158,18 @@ body {
     }
     80% {
         transform: translateX(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
     }
     100% {
         opacity: 1;
